--- a/portfolio-site-react/src/style/portfolio.css
+++ b/portfolio-site-react/src/style/portfolio.css
@@ -1,8 +1,17 @@
+#portfolio {
+  background-color: hsl(200, 100%, 30%);
+  background-image: url('https://images.unsplash.com/photo-1529444161959-5690000911bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80');
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 .portfolio_contents {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
+
 
 
 .portfolio_title {
@@ -52,7 +61,8 @@
 
 
 .portfolio_list {
-  border: 1px solid #333333;
+  border: 1px solid #fff;
+  /* border: 1px solid #000; */
   padding: 10px;
 
   /* background-color: beige; */
@@ -69,7 +79,8 @@
 
 
 .portfolio_list__item {
-  border-bottom: 1px solid #333333;
+  border-bottom: 1px solid #fff;
+  /* border-bottom: 1px solid #000; */
   padding: 8px 0;
   /* padding-left: 8px; */
   width: 100%;
@@ -79,7 +90,8 @@
 }
 
 .portfolio_list__item:hover {
-  box-shadow: 0 0 10px 10px hsl(0, 1%, 80%);
+  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
+  /* box-shadow: 0 0 10px 10px hsl(0, 0%, 20%); */
   font-weight: bold;
 }
 
@@ -89,7 +101,8 @@
 
   text-decoration: none;
   font-size: 18px;
-  color: #333333;
+  color: #fff;
+  /* color: #000; */
 }
 
 
