--- a/portfolio-site-react/src/style/skill.css
+++ b/portfolio-site-react/src/style/skill.css
@@ -1,6 +1,7 @@
 #skill {
-  background-color: hsl(93, 100%, 30%);
-  background-image: url('https://images.unsplash.com/photo-1465809873722-b4bf7208d2b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=942&q=80');
+  
+  background-color: hsl(20, 100%, 30%);
+  background-image: url('https://images.unsplash.com/photo-1475873326779-99eac8da25b0?ixlib=rb-1.2.1&auto=format&fit=crop&w=933&q=80');
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
