--- a/portfolio-site-react/src/App.css
+++ b/portfolio-site-react/src/App.css
@@ -1,26 +1,38 @@
+
 body {
+  margin: 0;
+  padding: 0;
+  
+  background-color: #000;
   /* background-image: url('https://images.unsplash.com/photo-1515694346937-94d85e41e6f0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80');
   background-size: cover;
   background-position: center;
   background-attachment: fixed; */
-}
-.App {
-  width: 100vw;
-  height: 100vh;
 
+  font-family: 'Montserrat', sans-serif;
+  /* color: #333333; */
+  color: #000;
+  letter-spacing: 4px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Montserrat', sans-serif;
-  /* color: #333333; */
-  color: #000;
-  letter-spacing: 4px;
+
+.App {
+  padding: 10px;
+  border: 20px solid #000;
+  /* width: 100vw; */
+  width: 90%;
+  /* height: 100vh; */
+  height: 90%;
+
+  background-color: #fff;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* .scroll_up */
@@ -56,10 +68,35 @@ body {
 
 
 footer {
+  width: 100vw;
   margin: 20px 0;
   background: #000;
-  background-image: url('https://images.unsplash.com/photo-1515694346937-94d85e41e6f0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+
+  display: flex;
+  /* flex-direction: column; */
+  /* align-items: flex-end; */
+  justify-content: center;
+  align-items: center;
+
+  overflow: scroll;
+  transition: all .4s ease;
 }
+
+
+.footer__item {
+  padding: 10px 0;
+  width: 200px;
+  text-align: center;
+  transition: all .4s ease;
+}
+
+.footer__item:hover {
+  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
+}
+
+.footer__item a {
+  text-decoration: none;
+  font-size: 24px;
+  color: #fff;
+}
+
