--- a/portfolio-site-react/src/App.css
+++ b/portfolio-site-react/src/App.css
@@ -17,16 +17,18 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  position: relative;
 }
 
 
 .App {
   padding: 10px;
   border: 20px solid #000;
-  /* width: 100vw; */
-  width: 90%;
-  /* height: 100vh; */
-  height: 90%;
+  width: 100%;
+  /* width: 90%; */
+  height: 100%;
+  /* height: 90%; */
 
   background-color: #fff;
 
@@ -35,68 +37,4 @@ body {
   align-items: center;
 }
 
-/* .scroll_up */
-.scroll_up {
-  /* position: fixed;
-  right: 0;
-  bottom: 0; */
-  padding: 30px 0;
-  width: 100vw;
-  /* width: 30px; */
-  /* height: 30px; */
-  height: 10vh;
-  /* height: 50px; */
-
-  /* text-align: center; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.scroll_up__icon {
-  font-size: 40px;
-  color: #000;
-  opacity: .6;
-  transition: all .4s ease;
-}
-
-.scroll_up__icon:hover {
-  opacity: 1;
-  /* box-shadow:  0 0 10px 10px hsl(0, 0%, 40%); */
-  /* text-shadow: 0 0 10px 10px hsl(0, 0%, 40%); */
-}
-
-
-footer {
-  width: 100vw;
-  margin: 20px 0;
-  background: #000;
-
-  display: flex;
-  /* flex-direction: column; */
-  /* align-items: flex-end; */
-  justify-content: center;
-  align-items: center;
-
-  overflow: scroll;
-  transition: all .4s ease;
-}
-
-
-.footer__item {
-  padding: 10px 0;
-  width: 200px;
-  text-align: center;
-  transition: all .4s ease;
-}
-
-.footer__item:hover {
-  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
-}
-
-.footer__item a {
-  text-decoration: none;
-  font-size: 24px;
-  color: #fff;
-}
 
