--- a/portfolio-site-react/src/style/header.css
+++ b/portfolio-site-react/src/style/header.css
@@ -15,8 +15,7 @@
   align-items: center;
 }
 
-.header_messages,
-.header_list {
+.header_messages {
   padding: 50px;
   height: 50vh;
 
@@ -25,112 +24,18 @@
   align-items: center;
 }
 
-.header__main_heading,
-.header_list__heading,
-.header_list__items {
+.header__main_heading {
   margin: 0;
   margin-top: 50px;
 }
 
 
 .header__main_heading {
-  font-size: 120px;
+  font-size: 200px;
 }
 
 .header__sub_heading {
   font-size: 40px;
 }
 
-
-.header_list {
-  margin: 0;
-  padding: 0;
-  width: 85vw;
-  /* height: 100%; */
-  /* background-color: #000; */
-  background-color: #fff;
-
-  overflow: scroll;
-
-  transition: all .4s ease;
-}
-
-
-.header_list:hover {
-  /* box-shadow: 0 0 10px 10px hsl(0, 1%, 80%); */
-  /* box-shadow: 0 0 10px 10px hsl(0, 1%, 20%); */
-}
-
-.header_list__heading {
-  font-size: 40px;
-  /* color: #fff; */
-  color: #000;
-  text-align: center;
-}
-
-.header_list__items {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.header_list__item a {
-  /* border-top: 100px solid black; */
-  /* border-right: 1px solid black;
-  border-left: 1px  solid black; */
-  /* border-bottom: 0; */
-
-  padding: 10px 20px;
-  width: 300px;
-
-  text-decoration: none;
-  font-size: 24px;
-
-
-  transition: all .4s ease;
-}
-
-.header_list__item:hover {
-  color: #fff;
-}
-
-.header_list__item a:hover {
-  box-shadow: 0 0 10px 10px hsl(0, 1%, 80%);
-  /* box-shadow: 0 0 10px 10px hsl(0, 1%, 20%); */
-  color: #fff;
-}
-
-.header_list__item.about_me a:hover {
-  background-color: hsl(100, 50%, 50%);
-}
-
-
-.header_list__item.skill a:hover {  
-  background-color: hsl(0, 50%, 50%);
-}
-
-
-.header_list__item.portfolio a:hover {
-  background-color: hsl(200, 50%, 50%);
-}
-
-
-.scroll {
-  width: 100%;
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-
-.scroll_down__icon {
-  margin-top: 20px;
-  font-size: 40px;
-  /* color: #fff; */
-  /* color: #000; */
-  transition: all .4s ease;
-}
 
