--- a/portfolio-site-react/src/style/section.css
+++ b/portfolio-site-react/src/style/section.css
@@ -7,6 +7,7 @@
   width: 100%;
   /* height: 90vh; */
   height: 90%;
+  height: 600px;
   
   background-color: #fff;
 
@@ -47,7 +48,7 @@
 .section_contents {
   padding: 20px;
   width: 100%;
-  height: 40vh;
+  height: 100%;
 
   /* background-color: #000; */
   color: #fff; 
