--- a/portfolio-site-react/src/style/portfolio.css
+++ b/portfolio-site-react/src/style/portfolio.css
@@ -64,6 +64,7 @@
 .portfolio_list {
   border: 1px solid #fff;
   /* border: 1px solid #000; */
+  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
   padding: 10px;
 
   /* background-color: beige; */
@@ -82,7 +83,7 @@
 .portfolio_list__item {
   border-bottom: 1px solid #fff;
   /* border-bottom: 1px solid #000; */
-  padding: 8px 0;
+  padding: 12px 0;
   /* padding-left: 8px; */
   width: 100%;
   text-align: center;
@@ -100,7 +101,21 @@
   font-size: 24px;
 }
 
+.portfolio_skill, 
+.go_url {
+  margin-top: 12px;
+}
 
+.go_url a {
+  padding: 4px;
+  color: #fff;
+  text-decoration: none;
+  transition: all .4s ease;
+}
+
+.go_url a:hover {
+  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
+}
 
 /* .portfolio_image */
 .portfolio_data_container {
@@ -109,4 +124,9 @@
   /* flex-grow: 2; */
 
   /* background-color: aquamarine;  */
+}
+
+
+.portfolio_image {
+  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
 }
