--- a/portfolio-site-react/src/style/section.css
+++ b/portfolio-site-react/src/style/section.css
@@ -62,8 +62,8 @@
 
 .section_contents:hover {
   /* border: 1px solid #000; */
-  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
-  background-color: hsla(0, 0%, 0%, .8);
+  /* box-shadow: 0 0 10px 10px hsl(0, 0%, 80%); */
+  /* background-color: hsla(0, 0%, 0%, .8); */
   /* box-shadow: 0 0 10px 10px hsl(0, 1%, 20%); */
 }
 
