--- a/portfolio-site-react/src/style/header.css
+++ b/portfolio-site-react/src/style/header.css
@@ -8,33 +8,28 @@
   background-position: center;
   background-attachment: fixed; */
   
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .header_messages {
   padding: 50px;
-  height: 50vh;
+  height: 50%;
 
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .header__main_heading {
   margin: 0;
-  margin-top: 50px;
+  /* margin-top: 50px; */
 }
 
 
 .header__main_heading {
-  font-size: 200px;
+  font-size: 100px;
 }
 
-.header__sub_heading {
+.header_message {
   font-size: 40px;
 }
 
