--- a/portfolio-site-react/src/style/header.css
+++ b/portfolio-site-react/src/style/header.css
@@ -26,10 +26,12 @@
 
 
 .header__main_heading {
+  margin-top: 100px;
   font-size: 100px;
 }
 
 .header_message {
+  margin-top: 40px;
   font-size: 40px;
 }
 
