--- a/portfolio-site-react/src/App.css
+++ b/portfolio-site-react/src/App.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   
-  background-color: #000;
+  /* background-color: #000; */
   /* background-image: url('https://images.unsplash.com/photo-1515694346937-94d85e41e6f0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80');
   background-size: cover;
   background-position: center;
@@ -14,27 +14,9 @@ body {
   color: #000;
   letter-spacing: 4px;
 
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
 
   position: relative;
 }
-
-
-.App {
-  padding: 10px;
-  border: 20px solid #000;
-  width: 100%;
-  /* width: 90%; */
-  height: 100%;
-  /* height: 90%; */
-
-  background-color: #fff;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-
