--- a/portfolio-site-react/src/style/portfolio.css
+++ b/portfolio-site-react/src/style/portfolio.css
@@ -1,10 +1,10 @@
-#portfolio {
+/* #portfolio {
   background-color: hsl(200, 100%, 30%);
   background-image: url('https://images.unsplash.com/photo-1529444161959-5690000911bc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80');
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-}
+} */
 
 .portfolio_contents {
   display: flex;
@@ -15,15 +15,16 @@
 
 
 
-.portfolio_title {
+.portfolio_list__heading,
+.portfolio_image__heading {
   font-size: 40px;
   text-align: center;
 }
 
 
 .portfolio_list_container,
-.portfolio_data_container {
-  padding: 20px 40px;
+.portfolio_image_container {
+  padding: 40px;
   height: 80%;
 
 
@@ -32,7 +33,7 @@
   align-items: center;
   justify-content: center;
 
-  /* overflow: hidden; */
+  overflow: hidden;
 
 }
 
@@ -46,6 +47,7 @@
   width: 90%;
   /* height: 100%; */
   height: 50%;
+  max-height: 500px;
 
 } 
 
@@ -55,6 +57,7 @@
 .portfolio_list_container {
   flex-basis: 30%;
   /* flex-grow: 1; */
+  /* max-height: 500px; */
   
   /* background-color: tan; */
   /* text-align: center; */
@@ -62,17 +65,19 @@
 
 
 .portfolio_list {
-  border: 1px solid #fff;
-  /* border: 1px solid #000; */
-  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
-  padding: 10px;
+  /* border: 1px solid #fff; */
+  border: 1px solid #000;
+  /* box-shadow: 0 0 10px 10px hsl(0, 0%, 80%); */
+  padding: 20px;
 
   /* background-color: beige; */
+  
 }
 
 .portfolio_list__background {
   /* padding: 10px; */
   height: 100%;
+  max-height: 400px;
 
   /* background-color: cornflowerblue; */
 
@@ -81,25 +86,27 @@
 
 
 .portfolio_list__item {
-  border-bottom: 1px solid #fff;
-  /* border-bottom: 1px solid #000; */
-  padding: 12px 0;
+  /* border-bottom: 1px solid #fff; */
+  border-bottom: 1px solid #000;  
+  padding: 20px 0;
   /* padding-left: 8px; */
   width: 100%;
-  text-align: center;
+  /* text-align: center; */
 
   transition: all .4s ease;
 }
 
-.portfolio_list__item:hover {
+.portfolio_list__item:hover {  
   box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
   /* box-shadow: 0 0 10px 10px hsl(0, 0%, 20%); */
   font-weight: bold;
 }
 
-.portfolio_name {
+.portfolio_list__title {
   font-size: 24px;
+  text-align: center;
 }
+
 
 .portfolio_skill, 
 .go_url {
@@ -108,17 +115,18 @@
 
 .go_url a {
   padding: 4px;
-  color: #fff;
+  color: #000;
   text-decoration: none;
   transition: all .4s ease;
 }
 
 .go_url a:hover {
-  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
+  /* box-shadow: 0 0 10px 10px hsl(0, 0%, 80%); */
+  font-weight: 900;
 }
 
 /* .portfolio_image */
-.portfolio_data_container {
+.portfolio_image_container {
   flex-basis: 70%;
   height: 100%;
   /* flex-grow: 2; */
@@ -128,5 +136,7 @@
 
 
 .portfolio_image {
+  /* border: 1px solid #000; */
+  /* padding: 20px; */
   box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
 }
