--- a/portfolio-site-react/src/style/portfolio.css
+++ b/portfolio-site-react/src/style/portfolio.css
@@ -46,8 +46,8 @@
   padding: 0;
   width: 90%;
   /* height: 100%; */
-  height: 50%;
-  max-height: 500px;
+  height: 90%;
+  max-height: 600px;
 
 } 
 
@@ -66,29 +66,31 @@
 
 .portfolio_list {
   /* border: 1px solid #fff; */
+  padding: 20px;
   border: 1px solid #000;
   /* box-shadow: 0 0 10px 10px hsl(0, 0%, 80%); */
-  padding: 20px;
 
   /* background-color: beige; */
   
 }
 
 .portfolio_list__background {
-  /* padding: 10px; */
+  /* margin: 14px; */
+  /* padding: 20px; */
   height: 100%;
-  max-height: 400px;
+  max-height: 500px;
 
   /* background-color: cornflowerblue; */
 
   overflow: scroll;
+
 }
 
 
 .portfolio_list__item {
   /* border-bottom: 1px solid #fff; */
   border-bottom: 1px solid #000;  
-  padding: 20px 0;
+  padding: 25px 0;
   /* padding-left: 8px; */
   width: 100%;
   /* text-align: center; */
@@ -113,6 +115,11 @@
   margin-top: 12px;
 }
 
+.portfolio_skill__name {
+  font-weight: bold;
+  color: #333;
+}
+
 .go_url a {
   padding: 4px;
   color: #000;
@@ -128,7 +135,7 @@
 /* .portfolio_image */
 .portfolio_image_container {
   flex-basis: 70%;
-  height: 100%;
+  /* height: 100%; */
   /* flex-grow: 2; */
 
   /* background-color: aquamarine;  */
