--- a/portfolio-site-react/src/style/section.css
+++ b/portfolio-site-react/src/style/section.css
@@ -3,7 +3,7 @@
 .section {
   margin: 100px 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   max-height: 1000px;
 
   display: flex;
@@ -84,7 +84,7 @@
   box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
   padding: 20px 0;
   width: 90%;
-  height: 100%;
+  height: 80%;
   max-height: 600px;
 
   /* background-color: #000; */
