--- a/portfolio-site-react/src/App.css
+++ b/portfolio-site-react/src/App.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   padding: 0;
-  
+  width: 100vw;
   /* background-color: #000; */
   /* background-image: url('https://images.unsplash.com/photo-1515694346937-94d85e41e6f0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80');
   background-size: cover;
@@ -12,11 +12,12 @@ body {
   font-family: 'Montserrat', sans-serif;
   /* color: #333333; */
   color: #000;
-  letter-spacing: 4px;
-
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
-
+  letter-spacing: 12px;
   position: relative;
+}
+
+
+.App {
+  width: 100vw;
+
 }
