--- a/portfolio-site-react/src/style/header.css
+++ b/portfolio-site-react/src/style/header.css
@@ -5,35 +5,98 @@
   width: 95%;
   height: 100vh;
 
-  /* background-image: url('https://images.unsplash.com/photo-1515694346937-94d85e41e6f0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed; */
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: scroll;
 }
 
 .header_messages {
-  padding: 50px;
-  height: 50%;
+  /* padding: 50px; */
 
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
-.header__main_heading {  
-  /* margin-top: 50px; */  
-}
 
 
 .header__main_heading {
-  margin-top: 100px;
+  /* margin-top: 100px; */
   font-size: 100px;
 }
 
 .header_message {
-  margin-top: 40px;
+  /* margin-top: 40px; */
   font-size: 40px;
 }
 
 
+@media(max-width: 1024px) {
+  .header__main_heading {  
+    /* margin-top: 20px;   */
+    font-size: 80px;
+  }
+  
+
+  .header_message {    
+    /* margin-top: 10px; */
+    font-size: 32px;
+  }
+  
+}
+
+@media(max-width: 768px) {
+  .header {
+    box-shadow: 0 0 4px 4px hsl(0, 0%, 80%);
+    /* width: 6%; */
+  }  
+
+  .header_messages {
+    padding: 20px;
+  }
+  
+  .header__main_heading {  
+    /* margin-top: 20px;   */
+    font-size: 40px;
+  }
+  
+
+  .header_message {    
+    /* margin-top: 10px; */
+    font-size: 18px;
+  }
+  
+
+}
+
+
+@media(max-width: 425px) {
+}
+
+
+
+@media(max-width: 375px) {
+  .header {
+    box-shadow: 0 0 4px 4px hsl(0, 0%, 80%);
+  }  
+
+  .header_messages {
+    padding: 20px;
+  }
+
+  .header__main_heading {  
+    /* margin-top: 20px;   */
+    font-size: 24px;
+  }
+  
+
+  .header_message {    
+    /* margin-top: 10px; */
+    font-size: 8px;
+  }
+  
+
+}
