--- a/portfolio-site-react/src/style/section.css
+++ b/portfolio-site-react/src/style/section.css
@@ -1,17 +1,19 @@
 
 
 .section {
-  margin: 100px 0;
-  width: 100%;
-  height: 100vh;
-  max-height: 1000px;
+  margin-top: 100px;
+  padding: 40px 0;
+  width: 100vw;
+  /* height: 100vh; */
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 
   position: relative;
+
+  /* overflow: scroll; */
 }
 
 
@@ -24,7 +26,7 @@
 .section__heading_container {
   /* flex: 1; */
 
-  width: 100%;
+  width: 90%;
   height: 100px;
 
   /* text-align: center; */
@@ -81,19 +83,87 @@
 .section_contents {
   /* z-index: 10; */
   margin-top: 100px;
-  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
+  /* box-shadow: 0 0 10px 10px hsl(0, 0%, 80%); */
   padding: 20px 0;
   width: 90%;
-  height: 80%;
-  max-height: 600px;
+  /* height: 80%; */
+  /* min-height: 600px; */
 
   /* background-color: #000; */
   /* color: #fff;  */
   /* background-color: transparent; */
   color: #000;
 
-  /* overflow: scroll; */
+  overflow: scroll;
   transition: all .4s ease;
 
 }
 
+
+.section_contents:hover {
+  box-shadow: 0 0 10px 10px hsl(0, 0%, 80%);
+}
+
+
+
+@media(max-width: 1024px) {
+  .section {
+    margin-top: 100px;   
+    /* width: 1024px;  */
+  }
+
+  .section__heading { 
+    padding: 50px 20px; 
+    font-size: 40px;
+    letter-spacing: 8px;
+  }
+
+  .section_contents {
+    margin-top: 50px;
+  }
+
+}
+
+@media(max-width: 768px) {
+
+  .section {
+    /* margin-top: 20px; */
+  }
+
+  .section__heading { 
+    padding: 30px 10px; 
+    font-size: 24px;
+    letter-spacing: 4px;
+  }
+
+
+  .section_contents {
+    margin-top: 20px;
+    padding: 8px 0;
+  }
+
+}
+
+
+@media(max-width: 425px) {
+  .section {
+    margin-top: 10px;
+    /* height: 400px; */
+    overflow: scroll;
+  }
+  .section__heading_container {
+    /* flex-direction: column; */
+  }
+
+
+  .section_contents {
+    margin-top: 0;
+  }
+  
+
+}
+
+
+@media(max-width: 375px) {
+  
+}
