--- a/portfolio-site-react/src/style/section.css
+++ b/portfolio-site-react/src/style/section.css
@@ -4,7 +4,7 @@
   margin-top: 100px;
   padding: 40px 0;
   width: 100vw;
-  /* height: 100vh; */
+  height: 100vh;
 
   display: flex;
   flex-direction: column;
